<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto">
    <PreferenceCategory
        app:icon="@drawable/ic_baseline_settings_24"
        app:title="@string/_general_settings">
        <ListPreference
            app:entries="@array/language_array"
            app:entryValues="@array/language_array"
            app:key="lang"
            app:summary="@string/_choose_language_summary"
            app:title="@string/_language">

        </ListPreference>
    </PreferenceCategory>


    <PreferenceCategory
        app:icon="@drawable/ic_baseline_notifications_24"
        app:title="@string/_notification">

        <CheckBoxPreference
            app:defaultValue="true"
            app:key="notification"
            app:summaryOff="@string/_recieve_notification_summary_summary_off"
            app:summaryOn="@string/_recieve_notification_summary_on"
            app:title="@string/_notification_send" />
    </PreferenceCategory>

    <PreferenceCategory app:title="@string/_extended_function">

        <Preference
            app:key="query"
            app:summary="@string/_how_often_take_query"
            app:title="@string/_daily_query" />

    </PreferenceCategory>
</PreferenceScreen>
