<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    tools:layout_editor_absoluteX="1dp"
    tools:layout_editor_absoluteY="166dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/relativeLayout8"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/textView20"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="0"
            app:layout_constraintEnd_toEndOf="@+id/seekBar8"
            app:layout_constraintStart_toStartOf="@+id/seekBar8"
            app:layout_constraintTop_toTopOf="@+id/textView12" />

        <SeekBar
            android:id="@+id/seekBar9"
            style="@style/Widget.AppCompat.SeekBar.Discrete"
            android:layout_width="0dp"
            android:layout_height="38dp"
            android:layout_marginTop="8dp"
            android:max="6"
            android:progress="0"
            app:layout_constraintEnd_toEndOf="@+id/textView19"
            app:layout_constraintStart_toStartOf="@+id/textView17"
            app:layout_constraintTop_toBottomOf="@+id/textView17" />

        <TextView
            android:id="@+id/textView17"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/_not_at_all_1"
            android:textColor="@color/black"
            android:textSize="14sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@+id/textView9"
            app:layout_constraintTop_toBottomOf="@+id/textView9" />

        <TextView
            android:id="@+id/textView18"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="0"
            app:layout_constraintEnd_toEndOf="@+id/seekBar9"
            app:layout_constraintStart_toStartOf="@+id/seekBar9"
            app:layout_constraintTop_toTopOf="@+id/textView17" />

        <TextView
            android:id="@+id/textView19"
            android:layout_width="wrap_content"
            android:layout_height="22dp"
            android:layout_marginTop="16dp"
            android:text="@string/_completely_true_1"
            android:textColor="@color/black"
            android:textSize="14sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="@+id/textView9"
            app:layout_constraintTop_toBottomOf="@+id/textView9" />

        <TextView
            android:id="@+id/textView9"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/_handling"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="@+id/seekBar8"
            app:layout_constraintStart_toStartOf="@+id/seekBar8"
            app:layout_constraintTop_toBottomOf="@+id/seekBar8" />

        <TextView
            android:id="@+id/textView7"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:text="@string/handling_without_thinking"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/zurück7"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="85dp"
            android:layout_height="48dp"
            android:layout_marginTop="16dp"
            android:backgroundTint="#673FCA"
            android:text="@string/_finish"
            app:layout_constraintEnd_toEndOf="@+id/editTextTextMultiLine7"
            app:layout_constraintHorizontal_bias="0.502"
            app:layout_constraintStart_toStartOf="@+id/editTextTextMultiLine7"
            app:layout_constraintTop_toBottomOf="@+id/editTextTextMultiLine7" />

        <SeekBar
            android:id="@+id/seekBar8"
            style="@style/Widget.AppCompat.SeekBar.Discrete"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:max="6"
            android:progress="0"
            app:layout_constraintEnd_toEndOf="@+id/textView13"
            app:layout_constraintStart_toStartOf="@+id/textView12"
            app:layout_constraintTop_toBottomOf="@+id/textView12" />

        <TextView
            android:id="@+id/textView12"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/_not_at_all_2"
            android:textColor="@color/black"
            android:textSize="14sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@+id/textView7"
            app:layout_constraintTop_toBottomOf="@+id/textView7" />

        <TextView
            android:id="@+id/textView13"
            android:layout_width="wrap_content"
            android:layout_height="22dp"
            android:layout_marginTop="16dp"
            android:text="@string/_completely_true_2"
            android:textColor="@color/black"
            android:textSize="14sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="@+id/textView7"
            app:layout_constraintTop_toBottomOf="@+id/textView7" />

        <EditText
            android:id="@+id/editTextTextMultiLine7"
            android:layout_width="320dp"
            android:layout_height="222dp"
            android:layout_marginTop="56dp"
            android:autofillHints=""
            android:ems="10"
            android:gravity="start|top"
            android:hint="@string/notes_1"
            android:inputType="textMultiLine"
            app:layout_constraintEnd_toEndOf="@+id/seekBar9"
            app:layout_constraintHorizontal_bias="0.491"
            app:layout_constraintStart_toStartOf="@+id/seekBar9"
            app:layout_constraintTop_toBottomOf="@+id/seekBar9" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>