<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    tools:layout_editor_absoluteX="1dp"
    tools:layout_editor_absoluteY="166dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/relativeLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".view.fragments.MoodTwoFragment">

        <Button
            android:id="@+id/abbrechen2"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="85dp"
            android:layout_height="48dp"
            android:text="@string/cance1"
            android:textSize="9dp"
            app:layout_constraintEnd_toEndOf="@+id/btn_next"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="@+id/btn_next"
            app:layout_constraintTop_toBottomOf="@+id/btn_next" />

        <TextView
            android:id="@+id/textView1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:text="@string/_negative_events"
            android:textColor="@color/black"
            android:textSize="19sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <SeekBar
            android:id="@+id/seekBarOne"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:defaultFocusHighlightEnabled="false"
            android:max="100"
            android:scaleX="1"
            android:scaleY="2"
            android:scrollbarThumbHorizontal="?android:attr/listDivider"
            android:scrollbarThumbVertical="?attr/dividerVertical"
            android:thumb="?attr/dividerVertical"
            android:thumbOffset="0dp"
            android:thumbTint="#00ED0909"
            android:thumbTintMode="multiply"
            app:layout_constraintEnd_toEndOf="@+id/sehrIntensiv"
            app:layout_constraintStart_toStartOf="@+id/keinEreignis"
            app:layout_constraintTop_toBottomOf="@+id/keinEreignis"
            tools:targetApi="o" />

        <TextView
            android:id="@+id/keinEreignis"
            android:layout_width="90dp"
            android:layout_height="18dp"
            android:layout_marginTop="8dp"
            android:text="@string/_no_result"

            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@+id/textView1"
            app:layout_constraintTop_toBottomOf="@+id/textView1" />


        <TextView
            android:id="@+id/sehrIntensiv"
            android:layout_width="90dp"
            android:layout_height="18dp"
            android:layout_marginTop="8dp"
            android:text="@string/_very_intensive"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="@+id/textView1"
            app:layout_constraintTop_toBottomOf="@+id/textView1" />


        <TextView
            android:id="@+id/textView2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/_positive_events"
            android:textColor="@color/black"
            android:textSize="19sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="@+id/seekBarOne"
            app:layout_constraintStart_toStartOf="@+id/seekBarOne"
            app:layout_constraintTop_toBottomOf="@+id/seekBarOne" />

        <SeekBar
            android:id="@+id/seekBarTwo"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:defaultFocusHighlightEnabled="false"
            android:max="100"
            android:scaleX="1"
            android:scaleY="2"
            android:scrollbarThumbHorizontal="?android:attr/listDivider"
            android:scrollbarThumbVertical="?attr/dividerVertical"
            android:thumb="?attr/dividerVertical"
            android:thumbOffset="0dp"
            android:thumbTint="#00ED0909"
            android:thumbTintMode="multiply"
            app:layout_constraintEnd_toEndOf="@+id/sehrIntensiv2"
            app:layout_constraintStart_toStartOf="@+id/keinEreignis2"
            app:layout_constraintTop_toBottomOf="@+id/keinEreignis2"
            tools:targetApi="o" />

        <TextView
            android:id="@+id/keinEreignis2"
            android:layout_width="90dp"
            android:layout_height="18dp"
            android:layout_marginTop="8dp"
            android:text="@string/_no_result_positive"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@+id/textView2"
            app:layout_constraintTop_toBottomOf="@+id/textView2" />

        <TextView
            android:id="@+id/sehrIntensiv2"
            android:layout_width="90dp"
            android:layout_height="18dp"
            android:layout_marginTop="8dp"
            android:text="@string/_very_intensive_positive"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="@+id/textView2"
            app:layout_constraintTop_toBottomOf="@+id/textView2" />

        <TextView
            android:id="@+id/progress7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="0%"
            android:textColor="@color/black"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="@+id/seekBarOne"
            app:layout_constraintStart_toStartOf="@+id/seekBarOne"
            app:layout_constraintTop_toTopOf="@+id/keinEreignis" />

        <TextView
            android:id="@+id/progress8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="0%"
            android:textColor="@color/black"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="@+id/seekBarTwo"
            app:layout_constraintStart_toStartOf="@+id/seekBarTwo"
            app:layout_constraintTop_toTopOf="@+id/keinEreignis2" />

        <Button
            android:id="@+id/btn_next"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="85dp"
            android:layout_height="48dp"
            android:layout_marginTop="8dp"
            android:backgroundTint="#673FCA"
            android:text="next>>"
            app:layout_constraintEnd_toEndOf="@+id/editTextTextMultiLine2"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="@+id/editTextTextMultiLine2"
            app:layout_constraintTop_toBottomOf="@+id/editTextTextMultiLine2" />

        <EditText
            android:id="@+id/editTextTextMultiLine2"
            android:layout_width="277dp"
            android:layout_height="177dp"
            android:layout_marginTop="88dp"
            android:ems="10"
            android:hint="@string/notes_1"
            android:gravity="start|top"
            android:inputType="textMultiLine"
            app:layout_constraintEnd_toEndOf="@+id/seekBarTwo"
            app:layout_constraintStart_toStartOf="@+id/seekBarTwo"
            app:layout_constraintTop_toBottomOf="@+id/seekBarTwo"
            android:autofillHints="" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>
