<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    tools:layout_editor_absoluteX="1dp"
    tools:layout_editor_absoluteY="166dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/relativeLayout6"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".view.fragments.MoodSixFragment">


        <Button
            android:id="@+id/zurück5"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="85dp"
            android:layout_height="48dp"
            android:layout_marginTop="40dp"
            android:backgroundTint="#673FCA"
            android:text="@string/fertig"
            app:layout_constraintEnd_toEndOf="@+id/editTextTextMultiLine8"
            app:layout_constraintHorizontal_bias="0.497"
            app:layout_constraintStart_toStartOf="@+id/editTextTextMultiLine8"
            app:layout_constraintTop_toBottomOf="@+id/editTextTextMultiLine8" />

        <TextView
            android:id="@+id/textView6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:text="@string/want_to_cancel"
            android:textColor="@color/black"
            android:textSize="25dp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/editTextTextMultiLine8"
            android:layout_width="316dp"
            android:layout_height="252dp"
            android:layout_marginTop="104dp"
            android:ems="10"
            android:gravity="start|top"
            android:hint="@string/because"
            android:inputType="textMultiLine"
            app:layout_constraintEnd_toEndOf="@+id/textView6"
            app:layout_constraintStart_toStartOf="@+id/textView6"
            app:layout_constraintTop_toBottomOf="@+id/textView6" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>